# mcap2hdf5

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  dataset.py  generate_dataset.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.github/workflows/: build.yml  ci.yaml  style.yaml  style.yml
docs/: design.md  hdf5.md  job_config.md  mcap.md  message_converter.md  pr_list.md  prototype.md
examples/: convert_kitti.py  load_kitti.py
mcap2hdf5/: __init__.py  cli.py  cli_utils.py  config.py  dataclasses.py  hdf5_writer.py  message_converter.py  pipeline.py  reader.py  synchronizer.py
mcap2hdf5/configs/: __init__.py  hdf5.py  messages.py  names.py  pipeline.py
mcap2hdf5/utils/: cli_utils.py  dataclasses.py  detect.py  job_config.py  logger.py  message_converter.py
mcap_to_ml/: mcap_handler.py
pipeline/: config.py  dataclasses.py  hdf5_writer.py  message_converter.py  reader.py  synchronizer.py
tests/: test_cli.py  test_message_converter.py
