[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcap2hdf5"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.22.0",
    "scipy>=1.10.0",
    "h5py>=3.8.0",
    "mcap-ros2-support>=0.5.0",
    "mcap>=1.1.0",
    "opencv-python-headless>=4.7.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
mcap2hdf5 = "mcap2hdf5.cli:app"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "NPY"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"mcap2hdf5/cli.py" = ["B008"]  # typer.Argument/Option() in defaults is standard Typer pattern

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = ["mcap2hdf5"]
