[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcap2hdf5"
version = "0.1.0"
description = "Convert ROS2 MCAP recordings to synchronized HDF5 datasets for ML training."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ayushman Choudhuri", email = "ayushc205de@gmail.com" }]
keywords = ["robotics", "ros2", "mcap", "hdf5", "lidar", "sensor-fusion", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.22.0",
    "scipy>=1.10.0",
    "h5py>=3.8.0",
    "mcap-ros2-support>=0.5.0",
    "mcap>=1.1.0",
    "opencv-python-headless>=4.7.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
mcap2hdf5 = "mcap2hdf5.cli:app"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "NPY"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"mcap2hdf5/cli.py" = ["B008"]  # typer.Argument/Option() in defaults is standard Typer pattern

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = ["mcap2hdf5"]
